--- a/1장_디자인_패턴/옵져버 패턴.md
+++ b/1장_디자인_패턴/옵져버 패턴.md
@@ -2,17 +2,17 @@
 
 **옵저버 패턴(observer pattern)은 주체가 어떤 객체(subject)의 상태 변화를 관찰하다가 상태 변화가 있을 때마다 메서드 등을 통해 옵저버 목록에 있는 옵저버들에게 변화를 알려주는 디자인 패턴이다.**
 
-![Untitled](%E1%84%8B%E1%85%A9%E1%86%B8%E1%84%8C%E1%85%A7%E1%84%87%E1%85%A5%20%E1%84%91%E1%85%A2%E1%84%90%E1%85%A5%E1%86%AB%207b30000b090a4eb5aeccc5e0b7d1746d/Untitled.png)
+![Untitled](https://user-images.githubusercontent.com/48992412/197173722-c750a44a-48e6-46d0-9416-e951026e924f.png)
 
 ### 대표적인 사례
 
 - 트위터
 
-![Untitled](%E1%84%8B%E1%85%A9%E1%86%B8%E1%84%8C%E1%85%A7%E1%84%87%E1%85%A5%20%E1%84%91%E1%85%A2%E1%84%90%E1%85%A5%E1%86%AB%207b30000b090a4eb5aeccc5e0b7d1746d/Untitled%201.png)
+![Untitled 1](https://user-images.githubusercontent.com/48992412/197173613-d9267b10-1b27-4953-8830-206bbd66d168.png)
 
 - 유튜브
 
-![Untitled](%E1%84%8B%E1%85%A9%E1%86%B8%E1%84%8C%E1%85%A7%E1%84%87%E1%85%A5%20%E1%84%91%E1%85%A2%E1%84%90%E1%85%A5%E1%86%AB%207b30000b090a4eb5aeccc5e0b7d1746d/Untitled%202.png)
+![Untitled 2](https://user-images.githubusercontent.com/48992412/197173703-31e143f7-bc42-4622-b1d1-69377a4bd104.png)
 
 특정 정보를 여러 뷰에서 동시에 얻기 위해 **주제자(Subject)**에 **구독자(Observer)**를 **등록(Register)**
 하여 **정보를 받는(갱신, Notify)** 것을 **옵저버 패턴(Observer pattern)**이라 한다. 물론 등록을 했으니 **해지(Remove)**도 가능하다.
@@ -132,6 +132,6 @@ c:: got message >> amumu is op champion!!
 
 옵져버 패턴은 주로 이벤트 기반 시스템에 사용하며 MVC 패턴에도 사용한다.
 
-![Untitled](%E1%84%8B%E1%85%A9%E1%86%B8%E1%84%8C%E1%85%A7%E1%84%87%E1%85%A5%20%E1%84%91%E1%85%A2%E1%84%90%E1%85%A5%E1%86%AB%207b30000b090a4eb5aeccc5e0b7d1746d/Untitled%203.png)
+![Untitled 3](https://user-images.githubusercontent.com/48992412/197173715-b342db45-d748-4c20-8b3c-6fbd4aa5fa3f.png)
 
 예를 들어 주체라고 볼 수 있는 모델(model)에서 변경 사항이 생겨 update() 메서드로 옵저버인 뷰에 알려주고 이를 기반으로 컨트롤러(controller) 등이 작동한다.
